standards/gnds-2.0/gnds/c/src/v2.0/top/CovarianceSuite.h

// --- Const-aware handles.
typedef const struct CovarianceSuiteClass *const ConstHandle2ConstCovarianceSuite;
typedef       struct CovarianceSuiteClass *const ConstHandle2CovarianceSuite;
typedef const struct CovarianceSuiteClass *      Handle2ConstCovarianceSuite;
typedef       struct CovarianceSuiteClass *      Handle2CovarianceSuite;
// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstCovarianceSuite
CovarianceSuiteDefaultConst();
// +++ Create, default
extern_c Handle2CovarianceSuite
CovarianceSuiteDefault();
// --- Create, general, const
extern_c Handle2ConstCovarianceSuite
CovarianceSuiteCreateConst(
   const char *const projectile,
   const char *const target,
   const char *const evaluation,
   const char *const interaction,
   const char *const format,
   ConstHandle2ConstExternalFiles externalFiles,
   ConstHandle2ConstStyles styles,
   ConstHandle2ConstCovarianceSections covarianceSections,
   ConstHandle2ConstParameterCovariances parameterCovariances
);
// +++ Create, general
extern_c Handle2CovarianceSuite
CovarianceSuiteCreate(
   const char *const projectile,
   const char *const target,
   const char *const evaluation,
   const char *const interaction,
   const char *const format,
   ConstHandle2ConstExternalFiles externalFiles,
   ConstHandle2ConstStyles styles,
   ConstHandle2ConstCovarianceSections covarianceSections,
   ConstHandle2ConstParameterCovariances parameterCovariances
);
// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
CovarianceSuiteAssign(ConstHandle2CovarianceSuite self, ConstHandle2ConstCovarianceSuite from);
// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
CovarianceSuiteDelete(ConstHandle2ConstCovarianceSuite self);
// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
CovarianceSuiteRead(ConstHandle2CovarianceSuite self, const char *const filename);
// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
CovarianceSuiteWrite(ConstHandle2ConstCovarianceSuite self, const char *const filename);
// +++ Print to standard output, in our prettyprinting format
extern_c int
CovarianceSuitePrint(ConstHandle2ConstCovarianceSuite self);
// +++ Print to standard output, as XML
extern_c int
CovarianceSuitePrintXML(ConstHandle2ConstCovarianceSuite self);
// +++ Print to standard output, as JSON
extern_c int
CovarianceSuitePrintJSON(ConstHandle2ConstCovarianceSuite self);
// -----------------------------------------------------------------------------
// Metadatum: projectile
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
CovarianceSuiteProjectileHas(ConstHandle2ConstCovarianceSuite self);
// +++ Get
// +++ Returns by value
extern_c const char *
CovarianceSuiteProjectileGet(ConstHandle2ConstCovarianceSuite self);
// +++ Set
extern_c void
CovarianceSuiteProjectileSet(ConstHandle2CovarianceSuite self, const char *const projectile);
// -----------------------------------------------------------------------------
// Metadatum: target
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
CovarianceSuiteTargetHas(ConstHandle2ConstCovarianceSuite self);
// +++ Get
// +++ Returns by value
extern_c const char *
CovarianceSuiteTargetGet(ConstHandle2ConstCovarianceSuite self);
// +++ Set
extern_c void
CovarianceSuiteTargetSet(ConstHandle2CovarianceSuite self, const char *const target);
// -----------------------------------------------------------------------------
// Metadatum: evaluation
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
CovarianceSuiteEvaluationHas(ConstHandle2ConstCovarianceSuite self);
// +++ Get
// +++ Returns by value
extern_c const char *
CovarianceSuiteEvaluationGet(ConstHandle2ConstCovarianceSuite self);
// +++ Set
extern_c void
CovarianceSuiteEvaluationSet(ConstHandle2CovarianceSuite self, const char *const evaluation);
// -----------------------------------------------------------------------------
// Metadatum: interaction
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
CovarianceSuiteInteractionHas(ConstHandle2ConstCovarianceSuite self);
// +++ Get
// +++ Returns by value
extern_c const char *
CovarianceSuiteInteractionGet(ConstHandle2ConstCovarianceSuite self);
// +++ Set
extern_c void
CovarianceSuiteInteractionSet(ConstHandle2CovarianceSuite self, const char *const interaction);
// -----------------------------------------------------------------------------
// Metadatum: format
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
CovarianceSuiteFormatHas(ConstHandle2ConstCovarianceSuite self);
// +++ Get
// +++ Returns by value
extern_c const char *
CovarianceSuiteFormatGet(ConstHandle2ConstCovarianceSuite self);
// +++ Set
extern_c void
CovarianceSuiteFormatSet(ConstHandle2CovarianceSuite self, const char *const format);
// -----------------------------------------------------------------------------
// Child: externalFiles
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
CovarianceSuiteExternalFilesHas(ConstHandle2ConstCovarianceSuite self);
// --- Get, const
extern_c Handle2ConstExternalFiles
CovarianceSuiteExternalFilesGetConst(ConstHandle2ConstCovarianceSuite self);